--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -146,7 +146,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub
+            <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/tedi0722/friend-finder.git">GitHub
                     Repo</a></p>
         </div>
     </footer>
