--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,7 +29,8 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/tedi0722/friend-finder.git">GitHub Repo</a></p>
+            <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/tedi0722/friend-finder.git">GitHub
+                    Repo</a></p>
         </div>
     </footer>
 </body>
