--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,7 +22,7 @@
                     <p class="lead">Answer a few basic questions.</p>
                     <p class="lead">Then find the friend with the greatest compatibility!</p>
                     <hr class="border-white my-5">
-                    <a class="btn btn-light btn-lg" href="/survey" role="button">Go To Survey</a>
+                    <a class="btn btn-light btn-lg" href="/survey" role="button" id="goToSurvey">Go To Survey</a>
                 </div>
             </div>
         </div>
